--- a/src/app/auth/navbar/navbar.component.html
+++ b/src/app/auth/navbar/navbar.component.html
@@ -1,1 +1,29 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/">NoteKeep</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse md:d-flex justify-content-end"
+      id="navbarNavDropdown"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-danger text-white" (click)="logout()">LogOut</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
