--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,1 +1,62 @@
-<p>login works!</p>
+<div class="mt-4 p-4">
+  <div class="container" *ngIf="errors">
+    <p class="text-center text-danger text-lg-start">
+      Credenciales incorrectas
+    </p>
+  </div>
+  <form [formGroup]="form" (submit)="login()">
+    <div class="mb-3">
+      <label for="email" class="form-label">Correo</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        placeholder="Ingrese Correo Electronico"
+        formControlName="email"
+        [class.is-valid]="
+          form.get('email')?.valid && form.get('email')?.touched
+        "
+        [class.is-invalid]="
+          form.get('email')?.invalid && form.get('email')?.touched
+        "
+      />
+      <span class="invalid-feedback" *ngIf="angForm.email.errors?.required">
+        El correo es requerido
+      </span>
+      <span class="invalid-feedback" *ngIf="angForm.email.errors?.email">
+        Ingrese un correo valido
+      </span>
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Contraseña</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        placeholder="Ingrese Contraseña"
+        formControlName="password"
+        [class.is-valid]="
+          form.get('password')?.valid && form.get('password')?.touched
+        "
+        [class.is-invalid]="
+          form.get('password')?.invalid && form.get('password')?.touched
+        "
+      />
+      <span class="invalid-feedback" *ngIf="angForm.password.errors?.required">
+        La contraseña es requerida
+      </span>
+      <span class="invalid-feedback" *ngIf="angForm.password.errors?.minlength">
+        Minimo 6 caracteres
+      </span>
+    </div>
+    <div class="d-grid gap-2">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg"
+        [disabled]="form.invalid"
+      >
+        Iniciar Sesion
+      </button>
+    </div>
+  </form>
+</div>
