--- a/src/app/auth/notes/add-edit/add-edit.component.html
+++ b/src/app/auth/notes/add-edit/add-edit.component.html
@@ -1,1 +1,19 @@
-<p>add-edit works!</p>
+<div class="mt-4 p-4">
+  <form>
+    <div class="mb-3">
+      <label for="title" class="form-label">Titulo</label>
+      <input
+        type="text"
+        class="form-control"
+        id="title"
+        placeholder="Titulo de la nota"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="content" class="form-label">Contenido</label>
+    </div>
+    <div class="d-grid gap-2">
+      <button type="submit" class="btn btn-primary btn-lg">Agregar</button>
+    </div>
+  </form>
+</div>
