--- a/src/app/auth/navbar/navbar.component.html
+++ b/src/app/auth/navbar/navbar.component.html
@@ -18,10 +18,32 @@
     >
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/">Login</a>
+          <a class="nav-link" aria-current="page" routerLink="/user">Notas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-danger text-white" (click)="logout()">LogOut</a>
+          <a class="nav-link" aria-current="page" routerLink="/user/tasks"
+            >Tareas</a
+          >
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            >{{ username }}
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Perfil</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li>
+              <a class="dropdown-item" href="#" (click)="logout()"
+                >Cerrar Sesion</a
+              >
+            </li>
+          </ul>
         </li>
       </ul>
     </div>
