--- a/src/app/auth/tasks/tasks.component.html
+++ b/src/app/auth/tasks/tasks.component.html
@@ -1,1 +1,39 @@
-<p>tasks works!</p>
+<div class="container mt-2">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="d-flex justify-content-between mb-2 form-group">
+        <input
+          type="text"
+          id="content"
+          class="form-control form-control-lg"
+          placeholder="Ingrese el contenido de la tarea"
+          [(ngModel)]="content"
+        />
+        <button class="btn btn-primary btn-lg ms-2">Agregar</button>
+      </div>
+    </div>
+
+    <!-- loadding -->
+    <app-spinner *ngIf="loading" class="mt-4"></app-spinner>
+
+    <div class="col-lg-12" *ngIf="!loading">
+      <div class="alert alert-secondary mb-2" *ngFor="let task of tasks">
+        <div class="d-flex justify-content-between">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="flexCheckDefault"
+              [checked]="task.complete"
+            />
+          </div>
+
+          <p>{{ task.content }}</p>
+
+          <button class="btn btn-danger btn-sm">Eliminar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
