--- a/src/app/auth/navbar/navbar.component.html
+++ b/src/app/auth/navbar/navbar.component.html
@@ -36,7 +36,7 @@
             >{{ username }}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Perfil</a></li>
+            <li><a class="dropdown-item" routerLink="profile">Perfil</a></li>
             <li><hr class="dropdown-divider" /></li>
             <li>
               <a class="dropdown-item" href="#" (click)="logout()"
