--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -59,7 +59,11 @@
       </span>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-lg" [disabled]="formInfo.invalid">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg"
+        [disabled]="formInfo.invalid"
+      >
         Cambiar Datos
       </button>
     </div>
@@ -75,7 +79,7 @@
     </p>
   </div> -->
   <h3>Cambiar Contraseña</h3>
-  <form class="mt-2">
+  <form class="mt-2" [formGroup]="formPass" (submit)="changePass()">
     <div class="mb-3">
       <label for="old_password" class="form-label">Contraseña Actual</label>
       <input
@@ -84,7 +88,22 @@
         id="old_password"
         name="old_password"
         placeholder="Ingrese su contraseña actual"
+        formControlName="old_password"
+        [class.is-valid]="
+          formPass.get('old_password')?.valid &&
+          formPass.get('old_password')?.touched
+        "
+        [class.is-invalid]="
+          formPass.get('old_password')?.invalid &&
+          formPass.get('old_password')?.touched
+        "
       />
+      <span
+        class="invalid-feedback"
+        *ngIf="angFormPass.old_password.errors?.required"
+      >
+        La contraseña es requerida
+      </span>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Nueva Contraseña</label>
@@ -94,7 +113,26 @@
         id="password"
         name="password"
         placeholder="Ingrese su nueva contraseña"
+        formControlName="password"
+        [class.is-valid]="
+          formPass.get('password')?.valid && formPass.get('password')?.touched
+        "
+        [class.is-invalid]="
+          formPass.get('password')?.invalid && formPass.get('password')?.touched
+        "
       />
+      <span
+        class="invalid-feedback"
+        *ngIf="angFormPass.password.errors?.required"
+      >
+        La contraseña es requerida
+      </span>
+      <span
+        class="invalid-feedback"
+        *ngIf="angFormPass.password.errors?.minlength"
+      >
+        La contraseña debe tener al menos 6 caracteres
+      </span>
     </div>
     <div class="mb-3">
       <label for="password_confirmation" class="form-label"
@@ -106,10 +144,31 @@
         id="password_confirmation"
         name="password_confirmation"
         placeholder="Repita su nueva contraseña"
+        formControlName="password_confirmation"
+        [class.is-valid]="
+          formPass.get('password_confirmation')?.valid &&
+          formPass.get('password_confirmation')?.touched
+        "
+        [class.is-invalid]="
+          formPass.get('password_confirmation')?.invalid &&
+          formPass.get('password_confirmation')?.touched
+        "
       />
+      <span
+        class="invalid-feedback"
+        *ngIf="angFormPass.password_confirmation.errors?.required"
+      >
+        La contraseña es requerida
+      </span>
+      <span
+        class="invalid-feedback"
+        *ngIf="angFormPass.password_confirmation.errors?.minlength"
+      >
+        La contraseña debe tener al menos 6 caracteres
+      </span>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-lg">
+      <button type="submit" class="btn btn-primary btn-lg" [disabled]="formPass.invalid">
         Cambiar Contraseña
       </button>
     </div>
