--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,9 +1,9 @@
 <div class="mt-4 p-4">
-  <!-- <div class="container" *ngIf="errors">
-    <p class="text-center text-danger text-lg-start">
-      Credenciales incorrectas
-    </p>
-  </div> -->
+  <div class="alert alert-danger text-center" *ngIf="errorsInfo?.length > 0">
+    <ul *ngFor="let error of errorsInfo">
+      <li>{{ error }}</li>
+    </ul>
+  </div>
   <h3>Informacion de Perfil</h3>
   <form class="mt-2" [formGroup]="formInfo" (submit)="updateProfile()">
     <div class="mb-3">
@@ -73,11 +73,11 @@
 <hr />
 
 <div class="mt-2 p-4">
-  <!-- <div class="container" *ngIf="errors">
-    <p class="text-center text-danger text-lg-start">
-      Credenciales incorrectas
-    </p>
-  </div> -->
+  <div class="alert alert-danger text-center" *ngIf="errorsPass?.length > 0">
+    <ul *ngFor="let error of errorsPass">
+      <li>{{ error }}</li>
+    </ul>
+  </div>
   <h3>Cambiar Contraseña</h3>
   <form class="mt-2" [formGroup]="formPass" (submit)="changePass()">
     <div class="mb-3">
@@ -168,7 +168,11 @@
       </span>
     </div>
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-lg" [disabled]="formPass.invalid">
+      <button
+        type="submit"
+        class="btn btn-primary btn-lg"
+        [disabled]="formPass.invalid"
+      >
         Cambiar Contraseña
       </button>
     </div>
